--- a/src/pages/gallery.css
+++ b/src/pages/gallery.css
@@ -38,6 +38,13 @@
   grid-gap: 10px;
   grid-auto-flow: dense;
 }
+.gallery-image-grid-mobile {
+  display: none;
+  grid-template-columns: repeat(6, 1fr);
+  grid-auto-rows: 360px 500px;
+  grid-gap: 10px;
+  grid-auto-flow: dense;
+}
 .gallery-item {
   width: 100%;
   height: 100%;
@@ -176,8 +183,13 @@
     display: flex;
   }
   .gallery-image-grid {
+    display: none;
+  }
+  .gallery-image-grid-mobile {
+    display: grid;
     margin-top: 24px;
     grid-template-columns: repeat(1, 1fr);
+    width: 95%;
   }
   .w-1,
   .w-2,
@@ -188,7 +200,6 @@
     grid-column: span 1;
   }
   .pagination-component {
-    width: 100%;
-    justify-content: center;
+    display: none;
   }
 }
