--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -31,6 +31,74 @@
   opacity: 1;
   text-decoration-line: underline;
 }
+.project-item {
+  text-decoration: none;
+}
+.project-image {
+  width: 100%;
+  height: 70%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+}
+.project-image .gatsby-image-wrapper {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+.project-image img {
+  width: 100%;
+  object-fit: fill;
+  object-position: 50% 50%;
+  cursor: pointer;
+  transition: 0.5s ease-in-out;
+}
+.project-item:hover {
+  opacity: 0.6;
+}
+.project-component-grid {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  width: 80%;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 10px;
+  grid-auto-flow: dense;
+}
+.project-title {
+  margin-top: 24px;
+  font-family: Ivar Display;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 26px;
+  line-height: 170%;
+  color: #34342e;
+}
+.project-desc-container {
+  display: flex;
+  align-items: center;
+  margin-top: 8px;
+}
+.project-desc {
+  font-family: GT America;
+  font-style: normal;
+  font-weight: normal;
+  margin-left: 8px;
+  font-size: 14px;
+  line-height: 170%;
+  color: #34342e;
+}
+
+@media screen and (max-width: 1200px) {
+  .project-title {
+    margin-top: 20px;
+    font-size: 22px;
+  }
+  .project-desc {
+    font-size: 12px;
+    line-height: 20.4px;
+  }
+}
 
 @media screen and (max-width: 1000px) {
   .project-tabs-container {
@@ -44,5 +112,26 @@
   }
   .project-tab {
     font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .project-component-grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .project-title {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 16px;
+    font-size: 18px;
+    line-height: 150%;
+  }
+  .project-desc-container {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin-top: 8px;
   }
 }
