--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -100,7 +100,7 @@
   color: #ffffff;
 }
 .header-content > div > h1 > a:hover {
-  color: gold;
+  opacity: 0.6;
 }
 
 .header-content > div > h2 {
